app/styles/main.scss
/* ... */
/******************
*** FOOTER
*******************/
.footer {
  @include page-container;
  @include page-element;

  li {
    display: inline;
    padding: 40px;

    a {
      color: $text-dark;
      font-size: 16px;

      &:hover {
        color: $cf-few;
        text-decoration: none; 
      }
    }
  }
}

/******************
*** MAIN PAGE 
*******************/
#main-page {
  text-align: center;

  // Hacky
  .crowd-factor {
    .timeslot {
      margin-left: -32px;
    }
  }

  .spot-types {
    @include page-element;

    .spots {
      padding: 0 0 0 10px;

      &:hover {
        cursor: pointer;
      }
    }

    .arrow-side {
      height: 50px;
      margin-top: -25px;
      padding: 0 5px 0 5px;
      width: 60px;
    }

    .arrow-center {
      height: 35px;
      width: 10px
    }

    .spot {
      display: inline-block;
      padding: 20px;
      margin: 0 10px;
    }

    .b4cm-icon {
      margin-top: -10px;
    }

    .center {
      display: inline-block;
    }

    h3 {
      display: inline-block;
    }

    .type-blurb {
      text-align: left;

      h4:nth-child(2) {
        margin: -10px 0 0 30px;
      }
    }
  }

  .nearby {
    @include page-element;
  }

  .visualize {
    @include page-element;

    .visualize-tagline {
      text-align: left;
      margin: 0 auto;
    }

    h2 {
      margin: 0 0 0 160px;
    }

    h2:nth-child(2) {
      margin: 0 0 0 26%;
    }

  }
}


/******************
*** Listings Page 
*******************/
#listings-page {

  .title-bar {
    @include page-element(10px, 10px, center, top);

    .main-col {
      text-align: center;
      padding-top: 20px;
    }

    .b4cm-icon {
      margin-top: -5px;
    }

    h2 {
      display: inline-block;
      padding: 0 0 0 20px;
    }

    h3 {
      display: inline-block;
      margin-left: 50px;
    }

    form {
      margin: 5px 0 0 100px;
    }

    h4 {
      display: inline-block;
    }

    select {
      margin: -10px 0 0 10px;
      width: 80px;
    }

    input {
      margin: -10px 0 0 10px;
      text-align: center;
      width: 150px;
    }

    button {
      margin: -10px 0 0 10px;
    }
  }

  .page {
    @include page-element(10px, 10px, left);
    min-height: 300px;
  }
  
  .listings {
    
    h6 {
      margin-top: -40px;
    }

    .add-spot {
      margin: -110px 0 0 500px;
    }

  }

  .listing {
    margin: 0 0 10px 0;
    padding: 0 10px;

    &:hover {
      cursor: pointer;
    }

    h4, h5 {
      margin: 0px;
    }

    .address {
      max-width: 290px;
    }

    .rank, .info, .crowd-bar, .watchers, .box {
      display: inline-block;
    }

    .rank {
      float: left;
    }

    .spot-pic {
      display: inline-block;
      padding: 0 5px;
      margin-top: -95px;
    }

    .info {
      padding: 0 0 0 5px;
    }

    .watchers {
      display: inline-block;
      margin: 4px 0 0 5px;
      vertical-align: top;
    }

    .crowd-rank {
      margin: 5px 0 0 0;
    }

    .box {
      height: 30px;
      width: 30px;

      h6 {
        display: inline;
        float: left;
        font-size: 10px;
        margin: 15px 0 0 2px;
      }
    }

    hr {
      margin-top: 15px;
      width: 100%;
    }

    .current-status {
      display: inline-block;
      float: left;
      margin: -90px 0 0 430px;
    }

    .status {
      margin: 0 0 0 68px;
    }

  }

  .map {
    margin: 0 0 0 20px;
  }

  .fixed {
    position: fixed;
    margin-top: -220px;
    margin-left: 8px;
  }

  .relative {
    position: relative;
  }

  .more {
    margin: -10px 0 0 0;

    a { 
      color: $text-dark;
      width: 100px;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}
/* ... */

